syntax = "proto3";

package fc;

// Enumerativo per distinguere il tipo di dato
enum RouteType {
    ROUTE = 0;       // Rappresenta una rotta completa
    POSITION = 1;    // Rappresenta una posizione puntuale
}

// Un singolo punto della rotta
message RoutePoint {
    double latitude = 1;
    double longitude = 2;
    int64 timestamp = 3;
    double speed = 4; // Velocit√† (opzionale)
}

// La rotta
message RouteAnnounce {
    // Enumerativo per distinguere il tipo di dato
    enum RouteType {
         ROUTE = 0;       // Rappresenta una rotta completa
         POSITION = 1;    // Rappresenta una posizione puntuale
    }

    string route_id = 1;                // ID della rotta - controllare
    RouteType type = 2;                 // Descrizione
    repeated RoutePoint points = 3;     // Punti della rotta
}
